terraform/main.tf
module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "~> 3.0"

  name = var.name
  cidr = var.cidr

  azs             = var.azs
  public_subnets  = var.public_subnets
  private_subnets = var.private_subnets

  enable_nat_gateway     = true
  single_nat_gateway     = false
  one_nat_gateway_per_az = false
  reuse_nat_ips          = true             # <= Skip creation of EIPs for the NAT Gateways
  external_nat_ip_ids    = aws_eip.nat.*.id # <= IPs specified here as input to the module
  #   enable_vpn_gateway = true

  #   Enable Public access to RDS instances
  #   create_database_subnet_group           = true
  #   create_database_subnet_route_table     = true
  #   create_database_internet_gateway_route = true

  enable_dns_hostnames = true
  enable_dns_support   = true
}

resource "aws_eip" "nat" {
  # count = 2 # Because will be using only one NAT Gateway

  count = "${length(var.private_subnets)}"

  vpc = true

  tags = {
    Name = var.name
  }
}
